4/29/14: started re-factoring model constructors. models will have their parent models set by the parent after theyve been added/moved. should clean up the code a bit